--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.postgresql:postgresql:42.2.10'
     implementation 'org.sql2o:sql2o:1.6.0'
+    testImplementation 'com.konghq:unirest-java:3.11.09'
 }
 
 test {
